# ping-client-rust

./: .env  .env.prod  .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
