[package]
name = "ping-client-rust"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Dodu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
futures = "0.3" 
tokio = { version = "1.12.0", features = ["full"] } 
dotenv = "0.15.0"